# BluraybackupEx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.ORIGIN  README.md  bluraybackup-ex.1  vcpkg.json
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
src/: async_writer.c  async_writer.h  bluray.c  bluray.h  cli.c  cli.h  compat.h  main.c  progress.c  progress.h
tools/: build-deb.sh  bump-version.ps1  collect-linux-artifacts.sh  collect-macos-artifacts.sh  collect-windows-artifacts.ps1
